--- a/src/index.scss
+++ b/src/index.scss
@@ -17,7 +17,8 @@
     --black-light: #173d77;
     --pink: #da2f68;
     --orange: #f89e00;
-    --gradient: linear-gradient(98.37deg, #f89e00 0.99%, #da2f68 100%);
+   --gradient: linear-gradient(98.37deg,  rgb(139, 48, 48)0.99%, rgb(149, 33, 33)  100%);
+
 }
 
 * {
@@ -28,6 +29,7 @@
 
 body {
     background-color: var(--black);
+     // background-color: rgb(89, 16, 16);
 }
 
 ::-webkit-scrollbar {
@@ -37,7 +39,7 @@ body {
 .skeleton {
     position: relative;
     overflow: hidden;
-    background-color: #0a2955;
+    background-color: #0f2d56;
     &::after {
         position: absolute;
         top: 0;
