--- a/src/pages/home/style.scss
+++ b/src/pages/home/style.scss
@@ -9,7 +9,7 @@
    }
    .carouselTitle{
     font-size:24px;
-    color:white;
-    font-weight:normal;
+    color:  rgb(127, 113, 113);
+    font-weight:bolder;
    }
 }
