--- a/src/pages/home/heroBanner/style.scss
+++ b/src/pages/home/heroBanner/style.scss
@@ -33,12 +33,12 @@
    .opacity-layer{
     width: 100%;
     height:250px;
-    background:linear-gradient(
+   /* background:linear-gradient(
       180deg,
-      rgba(4,21,45,0) 0%,
-      #04152d 79.17%
+      rgba(111, 116, 124, 0) 0%,
+      #061832 79.17%
 
-    ) ;
+    ) ;*/
     position:absolute;
     bottom:0 ;
     left:0;
@@ -47,22 +47,23 @@
     display:flex;
     flex-direction:column;
     align-items: center;
-    color: white;
+    color: rgb(127, 113, 113);
     text-align: center;
     position:relative;
     max-width :800px;
     margin:0 auto;
     .title{
-        font-size:50px ;
-        font-weight: 700;
+        font-size:30px ;
+        font-weight: 800;
         margin-bottom: 10px;
         @include md{
+            
            margin-bottom: 0;
            font-size:90px;
         }
     }
     .subTitle{
-        font-size:18px;
+        font-size:20px;
         font-weight:500;
         margin-bottom:40px;
         @include md{
@@ -76,11 +77,12 @@
         input{
             width: calc(100% - 100px);
             height:50px;
-            background-color: white;
+            background-color: rgb(136, 53, 53) ;
+            color:white;
             outline:0;
             border:0;
 
-            border-radius: 30px 0 0 30px;
+            border-radius:   15px 0 0 15  ;
             padding:0 15px;
             font-size: 14px;
             @include md{
@@ -93,11 +95,12 @@
         button{
             width:100px;
             height:50px;
-            background: var(--gradient);
+           //background: var(--gradient);
+            background:rgb(127, 113, 113);
             color:white;
             outline:0;
             border:0;
-            border-radius:0 30px 30px 0;
+            border-radius:0 15px 15px 0;
             font-size:16px;
             cursor:pointer;
             @include md{
